<resources>
    <string name="app_name">Go4lunch</string>
    <string name="facebook_application_id" translatable="false">3084977361822636</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3084977361822636</string>
    <string name="slogan">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="logo">logo</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="title_activity_detail_restaurant">DetailRestaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="username">USERNAME</string>
    <string name="email">email</string>
    <string name="background">background</string>
    <string name="avatar">avatar</string>
    <string name="go4lunch_logo">go4lunch_logo</string>
    <string name="restaurant">Restaurant</string>
    <string name="info_address">Info address</string>
    <string name="fab">fab_detailRestaurant</string>
    <string name="imgRestaurantPhoto">imgRestaurantPhoto</string>
    <string name="imgRestaurantRating">imgRestaurantRating</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="fab_to_find_my_location">fab_to_find_my_location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

</resources>