<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/picture_lunch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scrollX="30dp"
        android:src="@drawable/picture_lunch" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/logo"
        android:paddingStart="30dp"
        android:paddingTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bowl"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/name_app"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/name_app" />

    <Button
        android:id="@+id/btn_fb"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_facebook"
        app:icon="@drawable/icon_fb"
        android:theme="@style/Theme.AppCompat"
        android:text="@string/sign_in_with_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slogan"
        app:layout_constraintBottom_toTopOf="@id/btn_google"/>

    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_google"
        app:icon="@drawable/icon_google"
        android:text="@string/sign_in_with_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>