<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailRestaurantActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgRestaurantPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/imgRestaurantPhoto" />

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="bottom|end"
        app:maxImageSize="35dp"
        android:contentDescription="@string/fab"
        app:tint="#00FF00"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF5723">

            <TextView
                android:id="@+id/txtRestaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/restaurant"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgRestaurantRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_star_24"
                app:layout_constraintBottom_toBottomOf="@+id/txtRestaurantName"
                app:layout_constraintStart_toEndOf="@id/txtRestaurantName"
                app:layout_constraintTop_toTopOf="@+id/txtRestaurantName"
                android:contentDescription="@string/imgRestaurantRating" />

            <TextView
                android:id="@+id/txtRestaurantInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:text="@string/info_address"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/txtRestaurantName"
                app:layout_constraintTop_toBottomOf="@id/txtRestaurantName" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnCall"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:drawableTop="@drawable/ic_baseline_phone_24"
                    android:text="@string/call"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnLike"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:drawableTop="@drawable/ic_baseline_star_like_24"
                    android:text="@string/like"
                    app:layout_constraintStart_toEndOf="@id/btnCall"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnWeb"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:drawableTop="@drawable/ic_round_public_24"
                    android:text="@string/website"
                    app:layout_constraintStart_toEndOf="@id/btnLike"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDetailRestaurant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_workmate" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>